2012-06-05 -- Prerelease (thekraken-0.7-pre14)
-- support FahCore_a4
-- V7: unblock appropriate signals so dlbload
   can be stopped properly


2012-06-03 -- Prerelease (thekraken-0.7-pre13)
-- detect logfile fd with greater deal of flexibility
   to accommodate V7 client


2012-06-02 -- Prerelease (thekraken-0.7-pre12)
-- add startup deadline so broken units fail early
-- include improved logging infrastructure
-- FahCore installation process is now called 'wrapping'
   with dedicated command line option: -w; -i is preserved
   for backward compatibility


2012-05-20 -- Prerelease (thekraken-0.7-pre11)
-- resolves build issues in certain configurations


2012-05-20 -- Prerelease (thekraken-0.7-pre10)
-- use dynamic log fd detection w/DLB load


2012-05-20 -- Prerelease (thekraken-0.7-pre9)
-- incorporate novel approach to making FahCores engage
   Dynamic Load Balancing (Stephen Gordon)
-- autorestart DLB triggering method is no longer viable,
   drop it
-- 'np' override has been made obsolete by updates to V7
   client, drop it
-- prevent redundant SIGTERM from being delivered to FahCore
   if it's already shutting down due to SIGINT/Ctrl+C
-- play nicer with shell's job control
-- include more robust parsing of command line and config
   file variables
-- include startcpu configuration variable for advanced users
-- attempt to prevent root from running 'make install' initially


2011-12-04 -- New release (thekraken-0.6)
-- allow The Kraken to operate correctly on remote
   filesystems with inaccurate timekeeping
-- use stat() rather than lstat()
-- minor makefile update
-- documentation update


2011-07-30 -- Prerelease (thekraken-0.6-pre4)
-- The Kraken now sports autorestart feature (aims
   at engaging Dynamic Load Balancing)
-- avoid excessive prompts when operating recursively
-- don't use non-reentrant functions in signal handler
-- Makefile revamp
-- couple cosmetic documentation updates


2010-04-12 -- New release (thekraken-0.4)